kubernetes/nextcloud/svc.yml
---
apiVersion: v1
kind: Service
metadata:
  name: nextcloud
  labels:
    app: nextcloud
spec:
  selector:
    app: nextcloud
  ports:
  - port: 80
    protocol: TCP
