kubernetes/nextcloud/ingress.yml
---
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: nextcloud
  annotations:
    traefik.ingress.kubernetes.io/redirect-entry-point: https
spec:
  rules:
  - host: cloud.my_domain.fr
    http:
      paths:
      - path: /
        backend:
          serviceName: nextcloud
          servicePort: 80
